--- a/trunk/qsim.vcproj
+++ b/trunk/qsim.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding = "Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="9,00"
 	Name="qsim"
 	ProjectGUID="{32205864-077D-3D40-A150-00391EA3517D}"
 	Keyword="Qt4VSv1.0">
@@ -24,7 +24,7 @@
 				AssemblerListingLocation="debug\"
 				BufferSecurityCheck="false"
 				DebugInformationFormat="3"
-				ExceptionHandling="true"
+				ExceptionHandling="1"
 				GeneratePreprocessedFile="0"
 				ObjectFile="debug\"
 				Optimization ="4"
@@ -77,7 +77,7 @@
 				AssemblerListingLocation="release\"
 				BufferSecurityCheck="false"
 				DebugInformationFormat="0"
-				ExceptionHandling="true"
+				ExceptionHandling="1"
 				GeneratePreprocessedFile="0"
 				ObjectFile="release\"
 				Optimization ="2"
